@@ -1,4 +1,6 @@
 Version 1.11.14+dev:
+ * Graphics:
+   * Fixed bug #22045: Only blit neutral surfaces.
  * Language and i18n:
    * Updated translations: Portuguese
  * Miscellaneous and bug fixes:
@@ -11,7 +13,6 @@ Version 1.11.14+dev:
    * Remove 'allow_new_game=no' entries from random map new game list
    * Fix bug #22020: make base units with variations help entry clickable
      from the 'Unit Description' menu entry or from side pane.
-
 
 Version 1.11.14:
  * Campaigns:
